<resources>
    <string name="app_name">LexTrack</string>
</resources>
