...
          <Input
            placeholder="Ваше ім’я"
            value={form.name}
            onChangeText={t => setForm(f => ({...f, name: t}))}
          />
          <Input
            placeholder="Email"
            value={form.email}
            onChangeText={t => setForm(f => ({...f, email: t}))}
          />
          <Input
            placeholder="Телефон"
            value={form.phone}
...
